# kisinwi-plt

./: .env  .gitignore  CONTRIBUTING.md  LICENSE  README.md  TECHNICAL_DEBT.md  docker-compose.dev.yml  docker-compose.yml
agent_office/: .env  main.py  (+2 more)
data_manipulation_service/: .dockerignore  .gitignore  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt  test.py
data_manipulation_service/app/api/: deps.py
data_manipulation_service/app/api/routers/: __init__.py  classes.py  dataset.py  datasets.py  duplicates.py  files.py  test_api.py  upload.py  versions.py
data_manipulation_service/app/api/schemas/: __init__.py  classes.py  dataset.py  dataset_new.py  metadata.py  version.py
data_manipulation_service/app/core/case/: processing.py  validation.py
data_manipulation_service/app/core/dataset_module/: __init__.py  store.py
data_manipulation_service/app/core/exception/: base.py  dataset.py
data_manipulation_service/app/logging_/: config.py
data_manipulation_service/src/: .flake8  main.py
data_manipulation_service/src/api/: deps.py
data_manipulation_service/src/logging_/: config.py  factory.py
data_manipulation_service/test/: __init__.py
data_manipulation_service/tests/fileststem/: conftest.py  test_fsm.py
data_manipulation_service/tests/filesystem/: test_am.py
data_manipulation_service/tests/schemas/: conftest.py  test_dataset_new.py  test_metadata.py
services/agents/: .dockerignore  .env.example  Dockerfile  main.py  pyproject.toml
services/agents/app/: config.py
tasker/: .env  Dockerfile  README.md  main.py  pyproject.toml
(+698 files in other folders)
