[project]
name = "redis-service"
version = "0.1.0"
description = "Микросервис для работы с Redis"
authors = [{ name = "Your Name", email = "you@example.com" }]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "redis>=5.0.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.5.0",
]
requires-python = ">=3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"